--- a/src/app/pages/product-inventory/product-inventory.component.html
+++ b/src/app/pages/product-inventory/product-inventory.component.html
@@ -1,9 +1,37 @@
 
 <div class="container mx-auto pt-2 pb-8">
-    <h1 class="mb-8 mt-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-4xl lg:text-5xl dark:text-white w-full"><span class="underline underline-offset-3 decoration-8 decoration-primary-100 dark:decoration-primary-100">My inventory</span></h1>
+    <h1 class="hidden lg:block mb-8 mt-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-4xl lg:text-5xl dark:text-white w-full"><span class="underline underline-offset-3 decoration-8 decoration-primary-100 dark:decoration-primary-100">My inventory</span></h1>
+    <div class="flex flex-cols mr-2 ml-2 lg:hidden">
+      <h1 class="mb-8 mt-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 lg:text-4xl lg:text-5xl dark:text-white w-full"><span class="underline underline-offset-3 decoration-8 decoration-primary-100 dark:decoration-primary-100">My inventory</span></h1>
+      <div class="flex align-middle content-center items-center">
+        <button id="dropdown-nav" data-dropdown-toggle="dropdown-nav-content" 
+        class="text-black dark:text-white h-fit w-fit justify-between shadow bg-white dark:bg-secondary-200 hover:bg-gray-100 dark:hover:bg-secondary-300 focus:ring-4 focus:outline-none focus:ring-primary-100 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center shadow-lg"
+        type="button">
+        <svg class="w-4 h-4 mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+        </svg>
+        Inventory
+      </button>
+      </div>
+  
+    </div>
+    <!-- Dropdown menu -->
+    <div id="dropdown-nav-content" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
+      <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdown-nav">
+        <li>
+          <a (click)="goToOffers()" class="cursor-pointer block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">{{ 'PRODUCT_INVENTORY._products' | translate }}</a>
+        </li>
+        <li>
+          <a (click)="getServices()" class="cursor-pointer block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">{{ 'PRODUCT_INVENTORY._services' | translate }}</a>
+        </li>
+        <li>
+          <a (click)="getResources()" class="cursor-pointer block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">{{ 'PRODUCT_INVENTORY._resources' | translate }}</a>
+        </li>
+      </ul>
+    </div>
 
-    <div class="w-full grid grid-cols-20/80">
-
+    <div class="w-full grid lg:grid-cols-20/80">
+      <div class="hidden lg:block">
         <div class="w-48 h-fit text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg dark:bg-gray-700 dark:border-gray-600 dark:text-white">
             <button id="prod-button" (click)="goToOffers()" aria-current="true" class="block w-full px-4 py-2 text-white bg-primary-100 border-b border-gray-200 rounded-t-lg cursor-pointer dark:border-gray-600 hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
               {{ 'PRODUCT_INVENTORY._products' | translate }}
@@ -15,6 +43,7 @@
               {{ 'PRODUCT_INVENTORY._resources' | translate }}
             </button>
         </div>
+      </div>
         <div>
           @if(show_prods){
             <inventory-products></inventory-products>
@@ -25,7 +54,7 @@
           @if(show_res){
               res
           }
-        </div>
+        </div>      
     </div>
 
 </div>
