--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -22,7 +22,7 @@
     </div>
   } @else {
     <div class="flex flex-col w-full md:w-4/5 lg:w-3/4">
-      <section class="pl-5 content pb-5 px-4 flex items-center">
+      <section class="md:pl-5 content pb-5 px-4 flex items-center">
         <button (click)="showDrawer=!showDrawer;$event.stopPropagation();" type="button" class="md:hidden px-2 w-fit h-fit py-2 text-sm font-medium text-center inline-flex items-center dark:text-white bg-white text-primary-100 border border-primary-100 rounded-lg dark:bg-primary-100 dark:border-secondary-200">
           <svg class="w-4 h-4 mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
@@ -43,7 +43,7 @@
           </div>
         </form>
       </section>
-        <div class="pl-5 grid grid-cols-1 place-items-center lg:grid-cols-2 xl:grid-cols-3 h-full">
+        <div class="md:pl-5 grid grid-cols-1 place-items-center lg:grid-cols-2 xl:grid-cols-3 h-full">
           @for (prod of products; track prod.id) {
             <bae-off-card [productOff]=prod class="w-full h-full p-2"></bae-off-card>
           } @empty {
