--- a/src/app/pages/seller-offerings/offerings/seller-catalogs/update-catalog/update-catalog.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-catalogs/update-catalog/update-catalog.component.html
@@ -28,12 +28,12 @@
   <div class="bg-secondary-50 dark:bg-secondary-100 border border-secondary-50 dark:border-gray-800 mt-4 p-8 rounded-lg">
     <h2 class="text-3xl font-bold text-primary-100 dark:text-white ml-4">{{ 'UPDATE_CATALOG._update' | translate }}</h2>
     <hr class="h-px m-4 bg-gray-300 dark:bg-gray-200 border-0">
-    <div class="grid grid-cols-20/80">
-        <div class="flex flex-col mr-4">
-            <h2 class="text-xl font-bold text-black mb-4 dark:text-white">{{ 'UPDATE_CATALOG._steps' | translate }}</h2>
+    <div class="md:grid md:grid-cols-20/80">
+        <div class="flex sm:flex-row md:flex-col md:mr-4 w-full md:w-fit overflow-x-auto">
+            <h2 class="text-xl hidden md:block font-bold text-black mb-4 dark:text-white">{{ 'UPDATE_CATALOG._steps' | translate }}</h2>
             <button id="general-info" (click)="toggleGeneral()"
-            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-40/60 xl:grid-cols-20/80 mb-2 text-primary-100 dark:text-primary-50 justify-items-center md:justify-items-start">
-                <span id="general-circle"class="flex items-center justify-center w-8 h-8 border border-2 border-primary-100 dark:border-primary-50 rounded-full shrink-0">
+            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-40/60 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-primary-100 dark:text-primary-50 justify-items-center md:justify-items-start">
+                <span id="general-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-primary-100 dark:border-primary-50 rounded-full shrink-0">
                     1
                 </span>
                 <span>
@@ -42,8 +42,9 @@
                 </span>
             </button>
             <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
-            <button id="summary" (click)="showFinish()" class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-40/60 xl:grid-cols-20/80 mb-2 text-gray-500 justify-items-center md:justify-items-start">
-                <span id="summary-circle" class="flex items-center justify-center w-8 h-8 border border-2 border-gray-400 rounded-full shrink-0">
+            <button id="summary" (click)="showFinish()"
+            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-40/60 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
+                <span id="summary-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
                     2
                 </span>
                 <span>
@@ -52,6 +53,7 @@
                 </span>
             </button>
         </div>
+        <hr class="h-px md:hidden m-4 bg-gray-300 dark:bg-gray-200 border-0">
         <div>
             @if(showGeneral){
                 <h2 class="text-3xl font-bold text-primary-100 dark:text-white ml-4">{{ 'UPDATE_CATALOG._general' | translate }}</h2>
@@ -66,7 +68,8 @@
 
                             <ol class="flex items-center w-full text-sm font-medium text-center text-gray-500 dark:text-gray-200 sm:text-base">
                                 @if(catStatus=='Active'){
-                                    <li (click)="setCatStatus('Active')" class="cursor-pointer flex w-fit md:w-full items-center text-blue-500 after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:mx-2 md:after:mx-6 xl:after:mx-10">
+                                    <li (click)="setCatStatus('Active')"
+                                    class="cursor-pointer flex w-fit md:w-full items-center text-blue-500 after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:mx-2 md:after:mx-6 xl:after:mx-10">
                                         <span class="flex items-center">
                                             <svg class="w-6 h-6 text-blue-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
@@ -75,14 +78,16 @@
                                         </span>
                                     </li>
                                 }@else{
-                                    <li (click)="setCatStatus('Active')" class="cursor-pointer flex w-fit md:w-full items-center after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:mx-2 md:after:mx-6 xl:after:mx-10">
+                                    <li (click)="setCatStatus('Active')"
+                                    class="cursor-pointer flex w-fit md:w-full items-center after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:mx-2 md:after:mx-6 xl:after:mx-10">
                                         <span class="flex items-center">                                    
                                             Active
                                         </span>
                                     </li>
                                 }
                                 @if(catStatus=='Launched'){
-                                    <li (click)="setCatStatus('Launched')" class="cursor-pointer flex w-fit md:w-full items-center text-green-700 after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:mx-2 md:after:mx-6 xl:after:mx-10">
+                                    <li (click)="setCatStatus('Launched')"
+                                    class="cursor-pointer flex w-fit md:w-full items-center text-green-700 after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:mx-2 md:after:mx-6 xl:after:mx-10">
                                         <span class="flex items-center">
                                             <svg class="w-6 h-6 text-green-700" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
@@ -91,14 +96,16 @@
                                         </span>
                                     </li>
                                 }@else{
-                                    <li (click)="setCatStatus('Launched')" class="cursor-pointer flex w-fit md:w-full items-center after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:mx-2 md:after:mx-6 xl:after:mx-10">
+                                    <li (click)="setCatStatus('Launched')"
+                                    class="cursor-pointer flex w-fit md:w-full items-center after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:mx-2 md:after:mx-6 xl:after:mx-10">
                                         <span class="flex items-center">                                         
                                             Launched
                                         </span>
                                     </li>
                                 }
                                 @if(catStatus=='Retired'){
-                                    <li (click)="setCatStatus('Retired')" class="cursor-pointer flex w-fit md:w-full items-center text-yellow-500 after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:mx-2 md:after:mx-6 xl:after:mx-10">
+                                    <li (click)="setCatStatus('Retired')"
+                                    class="cursor-pointer flex w-fit md:w-full items-center text-yellow-500 after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:mx-2 md:after:mx-6 xl:after:mx-10">
                                         <span class="flex items-center">
                                             <svg class="w-6 h-6 text-yellow-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
@@ -107,7 +114,8 @@
                                         </span>
                                     </li>
                                 }@else{
-                                    <li (click)="setCatStatus('Retired')" class="cursor-pointer flex w-fit md:w-full items-center after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:mx-2 md:after:mx-6 xl:after:mx-10">
+                                    <li (click)="setCatStatus('Retired')" 
+                                    class="cursor-pointer flex w-fit md:w-full items-center after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:mx-2 md:after:mx-6 xl:after:mx-10">
                                         <span class="flex items-center">                                        
                                             Retired
                                         </span>
@@ -192,7 +200,7 @@
                                             </svg>                                                                                
                                             <span class="sr-only">Add link</span>
                                         </button>
-                                        <button (click)="showEmoji=!showEmoji;$event.stopPropagation();" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                        <button (click)="showEmoji=!showEmoji;$event.stopPropagation();" type="button" class="hidden lg:block p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                                                 <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM13.5 6a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Zm-7 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Zm3.5 9.5A5.5 5.5 0 0 1 4.6 11h10.81A5.5 5.5 0 0 1 10 15.5Z"/>
                                             </svg>
