--- a/src/app/pages/seller-offerings/offerings/seller-resource-spec/seller-resource-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-resource-spec/seller-resource-spec.component.html
@@ -1,7 +1,7 @@
 
 <div>
     <div class="w-full h-fit mb-4 bg-secondary-50 rounded-lg  dark:bg-secondary-100 dark:border-gray-800 border-gray-300 border-secondary-50 border flex flex-col shadow-lg">
-      <div class="flex w-full flex-col items-center md:flex-row justify-between">
+      <div class="flex w-full flex-cols items-center md:flex-row justify-between">
         <div class="mb-4 md:mb-0 md:w-1/4 p-8">
             <h2 class="text-2xl font-bold mb-4 dark:text-white">{{ 'OFFERINGS._res_spec' | translate }}</h2>  
         </div>
@@ -45,7 +45,7 @@
             </svg>
             </button>
             
-            <div id="dropdown" class="z-20 hidden w-1/5 p-3 bg-white rounded-lg shadow dark:bg-secondary-200">
+            <div id="dropdown" class="z-20 hidden w-fit md:w-1/5 p-3 bg-white rounded-lg shadow dark:bg-secondary-200">
             <h6 class="mb-3 text-sm font-medium text-gray-900 dark:text-white">
                 {{ 'OFFERINGS._state' | translate }}
             </h6>
@@ -125,7 +125,7 @@
                         <th scope="col" class="px-6 py-3">
                             {{ 'OFFERINGS._status' | translate }}
                         </th>
-                        <th scope="col" class="px-6 py-3">
+                        <th scope="col" class="hidden md:table-cell px-6 py-3">
                             {{ 'OFFERINGS._last_update' | translate }}
                         </th>
                         <th scope="col" class="px-6 py-3">
@@ -150,7 +150,7 @@
                                     <span class="bg-blue-100 dark:bg-secondary-300 text-red-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-red-500">{{res.lifecycleStatus}}</span>
                                 }
                             </td>
-                            <td class="px-6 py-4">
+                            <td class="hidden md:table-cell px-6 py-4">
                                 {{res.lastUpdate | date:'EEEE, dd/MM/yy, HH:mm'}} 
                             </td>
                             <td class="px-6 py-4">
