--- a/src/app/pages/seller-offerings/seller-offerings.component.html
+++ b/src/app/pages/seller-offerings/seller-offerings.component.html
@@ -36,7 +36,7 @@
       </ul>
   </div>
       
-    <div class="w-full grid sm: grid-cols-1 lg:grid-cols-20/80">
+    <div class="w-full grid lg:grid-cols-20/80">
 
         <div class="hidden lg:block">
           <div class="w-48 h-fit text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg dark:bg-gray-700 dark:border-gray-600 dark:text-white mb-8">
