FIX categories' bugs + markdown preview bugs on forms

--- a/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
@@ -1115,7 +1115,7 @@
                                 }
 
                             </div>
-                            <label for="description" class="font-bold text-lg col-span-2">{{ 'UPDATE_OFFER._description' | translate }}</label>
+                            <label for="description" class="font-bold text-lg col-span-2 dark:text-white">{{ 'UPDATE_OFFER._description' | translate }}</label>
                             @if(!customSelected){
                                 <textarea id="description" formControlName="description" rows="4" class="col-span-2 block p-2.5 w-full text-sm text-gray-900 bg-gray-50 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500"></textarea>
                             
